2009-08-09  Hedayat Vatankhah  <hedayat@grad.com>

	* windows/install_extra.nsi: 
	* windows/uninstall_extra.nsi:
	- add extra NSIS commands in these files
	 
	* CMakeLists.txt: 
	- bump package version to 0.1.2, preparing for a new release
	- using external files for NSIS installer extra commands
	- bump release number for modified libraries

2009-07-31  Hedayat Vatankhah  <hedayat@grad.com>

	* lib/oxygen/simulationserver/agentcontrol.cpp: 
	- a small cleanup
	
	* lib/oxygen/simulationserver/netcontrol.cpp (NetControl::ReadTCPMessages): 
	- reverting to the old behaviour; the intended logic is already implemented.

2009-07-30  Hedayat Vatankhah  <hedayat@grad.com>

	* lib/oxygen/physicsserver/space.h (Space): 
	* lib/oxygen/physicsserver/space.cpp (Space::Collide):
	- performance improvement: do not call dSpaceCollide() for spaces with
	  disabled internal collision.
	 
	* lib/oxygen/simulationserver/simulationserver.cpp: 
	- do not output too small skipped times
	- move PrePhysicsUpdate() call just before PhysicsUpdate() call in
	  RunMultiThreaded() function => 1 less wait() call with no speed loss.

2009-07-29  Hedayat Vatankhah  <hedayat@grad.com>

	* lib/oxygen/simulationserver/simulationserver.h: 
	* lib/oxygen/simulationserver/simulationserver.cpp:
	- fixed some issues in multi-threaded code
	 
	* spark/spark.rb: 
	- making multi-threaded mode the default mode for running server

2009-07-27  Hedayat Vatankhah  <hedayat@grad.com>

	* lib/zeitgeist/scriptserver/scriptserver.cpp: 
	- improve ruby 1.9.x compatibility (using RARRAY_LEN() instead of RARRAY()->len)
	
	* lib/salt/fileclasses.cpp (RFile::BundlePath): 
	- use SPARK_DIR environment variable for BundlePath if available

2009-07-26  Hedayat Vatankhah  <hedayat@grad.com>

	* CMakeLists.txt: 
	- set SPARK_DIR environment flag when installed using NSIS installer
	
	* cmake/FindODE.cmake: 
	- try to detect correct ODE preprocessor flag on Windows

2009-07-24  Marian Buchta  <marian.buchta@gmail.com>
